<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#9AFE2E"
    tools:context="com.namseoul.sa.tab.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:gravity="center">

        <ImageView
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:src="@drawable/tab_icon"
            android:tint="#FAFAFA"
            />

    </RelativeLayout>


    <EditText
        android:id="@+id/loginid"
        android:background="@drawable/round"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_marginBottom="20dip"
        android:layout_marginRight="30dip"
        android:layout_marginLeft="30dip"
        android:textSize="15sp"
        android:drawableLeft="@drawable/login_account"
        android:drawablePadding="5dip"
        android:drawableTint="#BDBDBD"
        android:hint="Username"
        android:fontFamily="@font/nanumbarunpenr"
        android:maxLines="1"/>


    <EditText
        android:id="@+id/loginpw"
        android:background="@drawable/round"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_marginBottom="20dip"
        android:layout_marginRight="30dip"
        android:layout_marginLeft="30dip"
        android:textSize="15sp"
        android:drawableLeft="@drawable/login_password"
        android:drawablePadding="5dip"
        android:drawableTint="#BDBDBD"
        android:hint="Password"
        android:fontFamily="@font/nanumbarunpenr"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/test_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findid"
        android:gravity="center"
        android:layout_marginBottom="30dip" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginRight="30dip"
        android:layout_marginLeft="30dip"
        android:background="@drawable/round"
        android:backgroundTint="#151515"
        android:textColor="#ffffff"
        android:layout_marginBottom="100dip"/>


    <TextView
        android:id="@+id/membership_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="@string/firstset"
        android:textSize="20dip"
        />



</LinearLayout>